wrp-1160 fixe on search overflow, saved list, notification icons, general icons, double lining, rearranged create new button

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -85,9 +85,9 @@ button,
 }
 .saved-list-buttons {
     background-color: transparent !important;
-    padding: 0px 3px !important;
+    padding: 0px 1px !important;
     color: #424242 !important;
-    font-size: 18px !important;
+    font-size: 16px !important;
     line-height: 1 !important;
 }
 .saved-list-buttons:hover {
